# stx

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  README_es.md  xmake.lua
docs/: README.md
docs/api/: bit.md  core.md  ct.md  dump.md  endian.md  fn.md  fs.md  literals.md  mem.md  range.md  str.md  time.md
docs/api/stx/: ct.md  fn.md  fs.md  io.md  mem.md  time.md
docs/api/zou/: ct.md  range.md  str.md  time.md
docs/stx/: bit.md  core.md  ct.md  endian.md  literals.md  mem.md  range.md
include/lbyte/: stx.hpp  zou.hpp
include/lbyte/stx/: bit.hpp  core.hpp  ct.hpp  ct_re.hpp  dump.hpp  endian.hpp  fn.hpp  fs.hpp  io.hpp  literals.hpp  mem.hpp  range.hpp  str.hpp  time.hpp
include/lbyte/zou/: ct.hpp  range.hpp  str.hpp  time.hpp
include/stx/: core.hpp  fn.hpp  fs.hpp  mem.hpp  range.hpp  stx.hpp  time.hpp
modules/stx/: bit.cppm  core.cppm  ct.cppm  dump.cppm  endian.cppm  fn.cppm  fs.cppm  io.cppm  literals.cppm  mem.cppm  range.cppm  str.cppm  stx.cppm  time.cppm
modules/zou/: ct.cppm  range.cppm  str.cppm  time.cppm  zou.cppm
test/: .gitignore  xmake.lua
test/tests/: core.cpp  dump.cpp  fn.cpp  fs.cpp  mem.cpp  range.cpp  time.cpp
test/xmake/: config_flags.lua  triple.lua
